Fix alignment about-photos.

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2201,10 +2201,6 @@ li.etalage_small_thumbs {
 }
 }
 
-.about-top .img-responsive{
-  max-width: 50%;
-}
-
 .about-top .row {
   margin-top: 30px;
 }
@@ -2215,4 +2211,10 @@ li.etalage_small_thumbs {
 
 .banner h1 {
   font-family: 'Lato', sans-serif;
+}
+
+@media (max-width: 1024px) {
+  .about-us {
+      height: 450px;
+  }
 }
